# debian-libapache-mod-encoding

./: AUTHORS  ChangeLog  Makefile.in  Makefile.simple  README  README.JP  aclocal.m4  configure  configure.in  mkinstalldirs  mod_encoding.c
debian/: 400mod_encoding.info  README.Debian  changelog  control  copyright  docs  libapache-mod-encoding.postinst  libapache-mod-encoding.prerm  libiconv-hook.docs  rules  watch
lib/: AUTHORS  COPYING  ChangeLog  Makefile.in  README  README.JP  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  cp.h  iconv.h.replace  iconv_hook.c  iconv_hook.h  iconv_hook_default.c  iconv_hook_eucjp.c  iconv_hook_ja_auto.c  iconv_hook_mssjis.c  iconv_hook_ucs2_cp932.c  iconv_hook_utf8_cp932.c  iconv_hook_utf8_eucjp.c  identify_encoding.c  identify_encoding.h  mkinstalldirs  ucs2_cp932.h
patches/: 100.iconv_hook-20040430-memleak.patch  100.mod_encoding-20020611a-safequery.patch  100.mod_encoding-strictconfig.patch
